<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena</name>
  <version>0.0.0</version>
  <description>A Mulitmodal Robot Agent.</description>
  <maintainer email="zeeland4work@gmail.com">Zeeland</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend> -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>nav2_bringup</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
